--- a/app/app.css
+++ b/app/app.css
@@ -4,11 +4,14 @@ body {
 
 .masthead {
   margin-bottom: 0px;
+
   background-color: #eee;
   background-image: url(img/bg.jpg);
-  background-position: 0% 25%;
+  background-position: 0% 100%;
   background-size: cover;
   background-repeat: no-repeat;
+  height: 75vh;
+
   color: #eee;
   text-shadow: black 0.3em 0.3em 0.3em;
   text-align: center;
