Spruce up contacts page.

--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -5,26 +5,69 @@
 </div>
 
 <div class="container">
-  <p> General questions and concerns may be directed to <a href="mailto:snhc@wusm.wustl.edu">snhc@wusm.wustl.edu</a>.
-    If you need to reach us during our <a href="clinicdates.html">operating hours</a>, please call our front desk at: <strong>314-531-5444</strong>.
-    When you call, ask for the student coordinator.</p>
-  <h2>Board Members</h2>
-  <p><strong>Co-chairs:</strong><br>
-    Sagar Mehta<br>
-    Miriam Ben Abdallah</p>
-  <p><strong>Outreach Coordinator:</strong><br>
-    Nehali Mehta</p>
-  <p><strong>Volunteer Recruitment:<br>
-    </strong>Nick Vryhof<strong><br>
-  </strong></p>
-  <p><strong>Physician Recruitment:</strong><br>
-    Francis Wu<br>
-    Rukayat Taiwo<br>
-  </p>
-  <p><strong>Treasurer:</strong><br>
-    Andrew Linkugel</p>
-  <p><strong>Data Management:</strong><br>
-    Janice Kim</p>
-  <p><strong>Webmaster and Tech Coordinator:</strong><br>
-    Nai Chien Yeat</p>
+  <div class="container-fluid" >
+    <p> If you need to find us for a clinic date, or call our front desk (during <a href="#about">operating hours</a> only), our addreses are as follows: </p>
+    <div class="col-md-offset-1 col-md-3">
+      <address>
+	<strong>The Family Care Health Center</strong><br>
+	4352 Manchester Avenue<br>
+	St. Louis, MO 63110<br>
+	<abbr title="Phone">P:</abbr> 314-531-5444
+      </address>
+    </div>
+    <div class="col-md-3">
+      <address>
+	<strong>Our Specialty Clinic</strong><br>
+	4570 Children's Place<br>
+	St. Louis, MO 63110<br>
+	<abbr title="Phone">P:</abbr> 314-531-5444
+      </address>
+    </div>
+    <div class="col-md-3">
+      <address>
+	<strong>Contact our Board</strong><br>
+	<a href="mailto:#">snhc@wusm.wusm.wustl.edu</a>
+      </address>
+    </div>
+  </div>
+
+  <h2>The SNHC Board</h2>
+  <div class="col-md-12">
+    <div class="col-md-4">
+      <h3>Co-chairs</h3>
+      <p>Radhika Jain</p>
+      <p>Emily Davis</p>
+    </div>
+    <div class="col-md-4">
+      <h3>Outreach Coordinator</h3>
+      <p>Elizabeth Maidl</p>
+      <p>Jacob Groenendyk</p>
+      <p>Rachel Springer</p>
+    </div>
+    <div class="col-md-4">
+      <h3>Volunteer Recruitment</h3>
+      <p>Shamaita Majumdar</p>
+    </div>
+  </div>
+  <div class="col-md-12">
+    <div class="col-md-4">
+      <h3>Physician Recruitment</h3>
+      <p>Kavon Javaharian</p>
+      <p>Mahati Mokkarala</p>
+    </div>
+    <div class="col-md-4">
+      <h3>Treasurer</h3>
+      <p>R. Lucas Thomas</p>
+    </div>
+    <div class="col-md-4">
+      <h3>Data Management</h3>
+      <p>Derek Schloemann</p>
+    </div>
+  </div>
+  <div class="col-md-12">
+    <div class="col-md-4">
+      <h3>Tech Czar</h3>
+      <p>Justin Porter</p>
+    </div>
+  </div>
 </div>
