Add FAQ, modify navbar to stratify by providers/patients, and link marketing banner.

--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -1,6 +1,7 @@
 <div class="jumbotron section-header" >
   <div class="container" >
     <h1>Contact</h1>
+    <p>Questions, comments, ideas, or concerns? We want to hear from you.</p>
   </div>
 </div>
 
@@ -9,7 +10,7 @@
     <p> If you need to find us for a clinic date, or call our front desk (during <a href="#about">operating hours</a> only), our addreses are as follows: </p>
     <div class="col-md-offset-1 col-md-3">
       <address>
-	<strong>The Family Care Health Center</strong><br>
+	<strong><a href="https://www.google.com/maps/dir//Family+Care+Health+Center,+Manchester+Avenue,+Saint+Louis,+MO">The Family Care Health Center</a></strong><br>
 	4352 Manchester Avenue<br>
 	St. Louis, MO 63110<br>
 	<abbr title="Phone">P:</abbr> 314-531-5444
