--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -11,19 +11,19 @@
       <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
       <h2>For Patients</h2>
       <p>We provide basic health care to uninsured members of our community completely free of cost, with the goal of taking care of our patients' immediate needs while helping them find a long-term primary care physician.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+      <p><a class="btn btn-default" href="#services" role="button">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
       <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
       <h2>For Physicains</h2>
       <p>The SNHC is typically staffed by one attending physician at each clinic date. That physician is responsible for both mentoring the students and for the high-level care of the patients that day.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+      <p><a class="btn btn-default" href="#physicians" role="button">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
       <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
       <h2>For Students</h2>
-      <p>The SNHC is a student-run clinic. We rely on student volunteers each week to staff our clinic. In return, we help them hone their skills--from history-taking to mentoring younger students--while giving back to the community.</p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+      <p>The SNHC is a student-run clinic. We rely on student volunteers each week to staff our clinic. In return, we help them hone their skills&mdash;from history-taking to mentoring other students&mdash;while giving back to the community.</p>
+      <p><a class="btn btn-default" href="#medstudents" role="button">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
   </div><!-- /.row -->
 </div>
