--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -13,7 +13,7 @@
 	<strong><a href="https://www.google.com/maps/dir//Family+Care+Health+Center,+Manchester+Avenue,+Saint+Louis,+MO">The Family Care Health Center</a></strong><br>
 	4352 Manchester Avenue<br>
 	St. Louis, MO 63110<br>
-	<abbr title="Phone">P:</abbr> 314-531-5444
+<!-- 	<abbr title="Phone">P:</abbr> 314-531-5444 -->
       </address>
     </div>
     <div class="col-md-3">
@@ -21,7 +21,7 @@
 	<strong>Our Specialty Clinic</strong><br>
 	4570 Children's Place<br>
 	St. Louis, MO 63110<br>
-	<abbr title="Phone">P:</abbr> 314-531-5444
+<!-- 	<abbr title="Phone">P:</abbr> 314-531-5444 -->
       </address>
     </div>
     <div class="col-md-3">
