Update contact info with GV.

--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -7,13 +7,15 @@
 
 <div class="container">
   <div class="container-fluid" >
-    <p> If you need to find us for a clinic date, or call our front desk (during <a href="#about">operating hours</a> only), our addreses are as follows: </p>
+    <p> If you need to contact the SNHC for clinic information or follow-up questions regarding your visit, please call [NUMBER]. On <a href="#services">clinic days</a> only we are located at: </p>
     <div class="col-md-offset-1 col-md-3">
       <address>
-	<strong><a href="https://www.google.com/maps/dir//Family+Care+Health+Center,+Manchester+Avenue,+Saint+Louis,+MO">The Family Care Health Center</a></strong><br>
+	<strong>Our Saturday Clinic</strong><br>
+	The Family Care Health Center<br>
 	4352 Manchester Avenue<br>
 	St. Louis, MO 63110<br>
-<!-- 	<abbr title="Phone">P:</abbr> 314-531-5444 -->
+ 	<abbr title="Phone">P:</abbr> (314) 275-0657
+	(Directions via <a href="https://www.google.com/maps/dir//Family+Care+Health+Center,+Manchester+Avenue,+Saint+Louis,+MO">Google Maps</a>)
       </address>
     </div>
     <div class="col-md-3">
@@ -21,7 +23,7 @@
 	<strong>Our Specialty Clinic</strong><br>
 	4570 Children's Place<br>
 	St. Louis, MO 63110<br>
-<!-- 	<abbr title="Phone">P:</abbr> 314-531-5444 -->
+ 	<abbr title="Phone">P:</abbr> (314) 275-0657
       </address>
     </div>
     <div class="col-md-3">
