--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -14,7 +14,7 @@
 	The Family Care Health Center<br>
 	4352 Manchester Avenue<br>
 	St. Louis, MO 63110<br>
- 	<abbr title="Phone">P:</abbr> (314) 275-0657
+ 	<abbr title="Phone">P:</abbr> (314) 275-0657<br>
 	(Directions via <a href="https://www.google.com/maps/dir//Family+Care+Health+Center,+Manchester+Avenue,+Saint+Louis,+MO">Google Maps</a>)
       </address>
     </div>
