Replace placeholder number.

--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -7,7 +7,7 @@
 
 <div class="container">
   <div class="container-fluid" >
-    <p> If you need to contact the SNHC for clinic information or follow-up questions regarding your visit, please call [NUMBER]. On <a href="#services">clinic days</a> only we are located at: </p>
+    <p> If you need to contact the SNHC for clinic information or follow-up questions regarding your visit, please call (314) 275-0657. On <a href="#services">clinic days</a> only we are located at: </p>
     <div class="col-md-offset-1 col-md-3">
       <address>
 	<strong>Our Saturday Clinic</strong><br>
