Fix typo in contact email
Line 32: Email incorrectly listed as "snhc@wusm.wusm.wustl.edu"; should be "snhc@wusm.wustl.edu".

--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -29,7 +29,7 @@
     <div class="col-md-3">
       <address>
 	<strong>Contact our Board</strong><br>
-	<a href="mailto:#">snhc@wusm.wusm.wustl.edu</a>
+	<a href="mailto:#">snhc@wusm.wustl.edu</a>
       </address>
     </div>
   </div>
