Fixing up physicians and medstudents with better links.

--- a/app/partials/medstudents.html
+++ b/app/partials/medstudents.html
@@ -8,7 +8,7 @@
 <div class="container">  
   <h2>Sign Up</h2>
   <ol> 
-    <li> Log in using "medpriv\" + your Medportal username
+    <li> Log in to <a href="https://snhc.wusm.wustl.edu/">SharePoint</a> using "medpriv\" + your Medportal username
       <ol type="a" >
 	<li> You <u>must</u> use backslash = "\", not "/" </li>
 	<li> Example: For student Jane Smith, type "<b>medpriv\smithj</b>" without the quotes </li>
