--- a/app/partials/physicians.html
+++ b/app/partials/physicians.html
@@ -16,10 +16,9 @@
   <p>If you are interested in volunteering, please <a href="#contact">contact us</a> at our general email. One of our physician coordinators (listed below) will be in touch with you to set a date that works best for you. Also feel free to contact us if you have any questions or concerns. (A list of available dates can be found <a href="https://snhc.wusm.wustl.edu/Lists/SNHC%20Sign%20UP/physicianssignup.aspx">here</a>. Use your Medpriv). We look forward to hearing from you!</p>
   
   <p>
-    The 2014-2015 physician coordinators:<br>
-    <br>
-    Rukayat Taiwo<br>
-    Francis Wu
+    The 2015-2016 physician coordinators:<br>
+    Kavon Javaharian<br>
+    Mahati Mokkarala
   </p>
   
   <h2>Signing Up</h2>
