Clean up contact language.

--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -7,29 +7,28 @@
 
 <div class="container">
   <div class="container-fluid" >
-    <p> If you need to contact the SNHC for clinic information or follow-up questions regarding your visit, please call (314) 275-0657. On <a href="#services">clinic days</a> only we are located at: </p>
+    <p> If you need to contact the SNHC for clinic information or follow-up questions regarding your visit, please call or email our board. Contact information, and location on <a href="#services">clinic days</a> is found below: </p>
     <div class="col-md-offset-1 col-md-3">
       <address>
-	<strong>Our Saturday Clinic</strong><br>
-	The Family Care Health Center<br>
-	4352 Manchester Avenue<br>
-	St. Louis, MO 63110<br>
- 	<abbr title="Phone">P:</abbr> (314) 275-0657<br>
-	(Directions via <a href="https://www.google.com/maps/dir//Family+Care+Health+Center,+Manchester+Avenue,+Saint+Louis,+MO">Google Maps</a>)
+	      <strong>Our Saturday Clinic</strong><br>
+        The Family Care Health Center<br>
+        4352 Manchester Avenue<br>
+        St. Louis, MO 63110<br>
+        (Directions via <a href="https://www.google.com/maps/dir//Family+Care+Health+Center,+Manchester+Avenue,+Saint+Louis,+MO">Google Maps</a>)
       </address>
     </div>
     <div class="col-md-3">
       <address>
-	<strong>Our Specialty Clinic</strong><br>
-	4570 Children's Place<br>
-	St. Louis, MO 63110<br>
- 	<abbr title="Phone">P:</abbr> (314) 275-0657
+	       <strong>Our Specialty Clinic</strong><br>
+	       4570 Children's Place<br>
+	       St. Louis, MO 63110<br>
       </address>
     </div>
     <div class="col-md-3">
       <address>
-	<strong>Contact our Board</strong><br>
-	<a href="mailto:#">snhc@wusm.wustl.edu</a>
+      	<strong>Contact our Board</strong><br>
+	      <a href="mailto:#">snhc@wusm.wustl.edu</a>
+        <abbr title="Phone">P:</abbr> (314) 275-0657<br>
       </address>
     </div>
   </div>
