--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -27,7 +27,7 @@
     <div class="col-md-3">
       <address>
       	<strong>Contact our Board</strong><br>
-	      <a href="mailto:#">snhc@wusm.wustl.edu</a>
+	      <a href="mailto:#">snhc@wusm.wustl.edu</a><br>
         <abbr title="Phone">P:</abbr> (314) 275-0657<br>
       </address>
     </div>
