--- a/app/partials/services.html
+++ b/app/partials/services.html
@@ -37,6 +37,6 @@
   </p>
   <h1>Wednesday Specialty Nights</h1>
   <p> The Wednesday Specialty Nights provide free medical specialty services for uninsured patients.
-    Specialty services include an Orthopedics service for muscle or joint pain and psychiatric services.
+    Specialty services include an Orthopedics service for muscle or joint pain and depression and anxiety services.
   </p>
 </div>
