--- a/app/partials/services.html
+++ b/app/partials/services.html
@@ -24,11 +24,11 @@
   </p>
   <p> Any adult patient seeking our services is welcome at our clinic.
     However, SNHC is not currently equipped to function as a long-term medical home.
-    We strongly encourage our patients to set up routine appointments with primary care physicians after visiting SHNC.
+    We strongly encourage our patients to set up routine appointments with primary care physicians after visiting the SHNC.
     Please visit our resources page for help with finding medications and other local health centers.
   </p>
-  <p> SNHC is located in the Forest Park Southeast neighborhood in St. Louis, Missouri.
-    Clinic is held in the Family Health Care Center facility at 4352 Manchester Avenue on most Saturdays from 9:00AM to 12:00PM.
+  <p> The SNHC is located in the Forest Park Southeast neighborhood in St. Louis, Missouri.
+    The clinic is held in the Family Health Care Center facility at 4352 Manchester Avenue on most Saturdays from 9:00AM to 12:00PM.
   </p>
   <p> We do not take appointments.
     Patients are seen on a first come, first serve basis.
@@ -37,6 +37,7 @@
   </p>
   <h1>Wednesday Specialty Nights</h1>
   <p> The Wednesday Specialty Nights provide free medical specialty services for uninsured patients.
-    Specialty services include an Orthopedics service for muscle or joint pain and depression and anxiety services.
+    Specialty services include an Orthopedics service for muscle and joint pain and services for depression and anxiety. 
+    The services offered vary by week, so please check our Google calendar for the most up to date information. 
   </p>
 </div>
