--- a/app/partials/services.html
+++ b/app/partials/services.html
@@ -1,7 +1,7 @@
 <div class="jumbotron section-header" >
   <div class="container" >
     <h1>Services</h1>
-    <p> The SNHC provides two services: a basic care-focused clinic on Saturday mornings and a speicalty-care clinic Wednesday evenings.</p>
+    <p> The SNHC provides two services: a basic care-focused clinic on Saturday mornings and a specialty-care clinic Wednesday evenings.</p>
   </div>
 </div>
 
