--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -15,14 +15,14 @@
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
       <img class="img-circle" src="img/for_physicians.jpg" alt="John Atkinson, MD" style="width: 140px; height: 140px;">
-      <h2>For Physicains</h2>
+      <h2>For Physicians </h2>
       <p>The SNHC is typically staffed by one attending physician at each clinic date. That physician is responsible for both mentoring the students and for the high-level care of the patients that day.</p>
       <p><a class="btn btn-default" href="#physicians" role="button">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
       <img class="img-circle" src="img/for_students.jpg" alt="Student" style="width: 140px; height: 140px;">
       <h2>For Students</h2>
-      <p>The SNHC is a student-run clinic. We rely on student volunteers each week to staff our clinic. In return, we help them hone their skills&mdash;from history-taking to mentoring other students&mdash;while giving back to the community.</p>
+      <p>The SNHC is a student-run clinic. We rely on student volunteers to staff our clinic each week. In return, we help them hone their skills&mdash;from history-taking to mentoring other students&mdash;while giving back to the community.</p>
       <p><a class="btn btn-default" href="#medstudents" role="button">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
   </div><!-- /.row -->
