--- a/app/partials/medstudents.html
+++ b/app/partials/medstudents.html
@@ -1,7 +1,7 @@
 <div class="jumbotron section-header" >
   <div class="container" >
     <h1>Medical Student Volunteers</h1>
-    <p> The Saturday Neighborhood Health Clinic (SNHC) is staffed each weekend by three teams consisting of a paired preclinical and clinical medical student.</p>
+    <p> The Saturday Neighborhood Health Clinic (SNHC) is staffed each weekend by three teams, each consisting of a paired preclinical and clinical medical student.</p>
   </div>
 </div>
 
@@ -11,7 +11,7 @@
     <li> Log in to <a href="https://snhc.wusm.wustl.edu/">SharePoint</a> using "medpriv\" + your Medportal username
       <ol type="a" >
 	<li> You <u>must</u> use backslash = "\", not "/" </li>
-	<li> Example: For student Jane Smith, type "<b>medpriv\smithj</b>" without the quotes </li>
+	<li> Example: For student Jane Smith, type <b>medpriv\smithj</b> </li>
       </ol>
     <li> <u>Mouse over</u> dates (in the left column) to view sign-up slots. </li>
     <li> Click on a date to view the entry for that day in more detail. <u>This will allow you to see the <strong>coordinator's email</strong> and <b>volunteers' phone numbers</b>, which are not visible on the main page due to space limitations.</u></li>
