--- a/app/partials/faq.html
+++ b/app/partials/faq.html
@@ -9,7 +9,7 @@
   <ol>
     <li>
       <p><strong>What are your hours of operation?</strong><br>
-	The clinic is open from 9am-12pm on Saturdays. During the summer months the clinic is open on most Saturdays. Please see our <a href="#about">Clinic Dates page</a> for a complete listing of the dates we are open.</p>
+	The Saturday clinic is open from 9am-12pm on Saturdays. During the summer months the clinic is open on most Saturdays. The Specialty Clinic is open on Wednesdays from 6-9pm. Please see our <a href="#about">Clinic Dates page</a> for a complete listing of the dates we are open.</p>
     </li>
     <li>
       <p><strong>What types of services do you offer?</strong><br>
@@ -57,19 +57,21 @@
     </li>    
     <li>
       <p><strong>Who will see me at the clinic?</strong><br>
-	The clinic is staffed by Washington University physicians and medical students. Nurses from the Family Care Health Center help with lab tests and vaccinations.</p>
+	The clinic is staffed by Washington University physicians and medical students. Nurses from the Family Care Health Center assist with lab tests and vaccinations.</p>
     </li>    
     <li>
       <p><strong>What can I expect from the typical visit?</strong><br>
-	When you arrive please tell the receptionist you are there for the Saturday Neighborhood Health Clinic. Patients will be seen in the order that they arrive, so please be prepared to wait. When the medical team is ready to see you, you will first be seen by two medical students. These student doctors will ask you questions about your health and about what brought you into the clinic. They will then perform a physical exam based on your symptoms. The student doctors will report this information to the physician. The physician may also perform parts of the physical exam. If you need any laboratory tests those will be performed at this time. The student doctors and the physician will talk to you about their findings and discuss potential treatments.</p>
+	When you arrive, please tell the receptionist you are there for the Saturday Neighborhood Health Clinic. Patients will be seen in the order that they arrive, so please be prepared to wait. When the medical team is ready to see you, you will first be seen by two medical students. These student doctors will ask you questions about your health and about what brought you into the clinic. They will then perform a physical exam based on your symptoms. The student doctors will report this information to the physician. The physician may also perform parts of the physical exam. If you need any laboratory tests, they will be performed at this time. The student doctors and the physician will talk to you about their findings and discuss potential treatments. You will then be discharged home with any necessary prescriptions and a referral for a local primary care provider.</p>
     </li>    
     <li>
       <p><strong>How many times can I visit the clinic?</strong><br>
-	After three visits to SNHC we try to find our patients a primary care physician so that they can receive medical care on a regular basis.</p>
+	The primary goal of the SNHC is to guide our patient through the process of finding a long-term primary care home. As such, we limit patients to three SNHC visits for the same complaint, while assisting them in making a primary care appointment at a local Federally Qualified Health Center (FQHC).</p>
     </li>    
     <li>
       <p><strong>Where are you located?</strong><br>
-	We are located inside the Family Care Health Center at 4352 Manchester Avenue, St. Louis, Missouri. Please click <a href="#contact">this link</a> for directions.</p>
+	The Saturday clinic is located inside the Family Care Health Center at 4352 Manchester Avenue, St. Louis, Missouri. 
+	The Wednesday clinic is located inside the Infectious Diseases outpatient clinic at 4570 Children's Place on the Washington University Medical Campus, near the CWE MetroLink stop. Please click <a href="#contact">this link</a> for directions.
+	</p>
     </li>
   </ol>
 </div>
