--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -68,8 +68,9 @@
   </div>
   <div class="col-md-12">
     <div class="col-md-4">
-      <h3>Tech Czar</h3>
+      <h3>For technological issues, contact our Web Guru:</h3>
       <p>Justin Porter</p>
+      <p>justinrporter@wustl.edu</p>
     </div>
   </div>
 </div>
