--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -37,8 +37,8 @@
   <div class="col-md-12">
     <div class="col-md-4">
       <h3>Co-chairs</h3>
-      <p>Radhika Jain</p>
-      <p>Emily Davis</p>
+      <p>Radhika Jain: <a href="mailto:#">jainr@wusm.wustl.edu</a></p>
+      <p>Emily Davis: davise@wusm.wustl.edu</p>
     </div>
     <div class="col-md-4">
       <h3>Outreach Coordinator</h3>
@@ -68,9 +68,8 @@
   </div>
   <div class="col-md-12">
     <div class="col-md-4">
-      <h3>For technological issues, contact our Web Guru:</h3>
+      <h3>Tech Czar</h3>
       <p>Justin Porter</p>
-      <p>justinrporter@wustl.edu</p>
     </div>
   </div>
 </div>
