--- a/app/partials/physicians.html
+++ b/app/partials/physicians.html
@@ -7,7 +7,7 @@
 
 <div class="container">
   <h2>Getting Involved</h2>
-  <p>We are trying to recruit more <strong>Washington University-affiliated physicians who are boarded in emergency medicine, internal medicine, or OB/GYN</strong> to volunteer to attend at the clinic for approximately 4-5 hours on a Saturday morning, from 8:45AM to about 1:00PM or 2:00PM.</p>
+  <p>We are trying to recruit more <strong>Washington University-affiliated physicians who are boarded in emergency medicine, internal medicine, or OB/GYN</strong> to volunteer at the clinic on a Saturday morning, from 8:45AM to about 1:00PM to 2:00PM.</p>
 
   <p>We see 6-9 patients during each clinic session. You will work with up to three preclinical students and three clinical students. The students perform a full history and physical exam as time allows, then present and discuss the case with you. No orientation is needed for volunteer physicians, as our students are responsible for all paperwork. There is one student coordinator during each clinic session whose duty is to supervise paperwork and logistics. Periodically, the coordinator may  ask you to interpret lab results from the previous weeks' patients.</p>
                     
