--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -36,12 +36,12 @@
   <h2>The SNHC Board</h2>
   <div class="col-md-12">
     <div class="col-md-4">
-      <h3>Co-chairs</h3>
+      <h3>Co-Chairs</h3>
       <p>Radhika Jain</p>
       <p>Emily Davis</p>
     </div>
     <div class="col-md-4">
-      <h3>Outreach Coordinator</h3>
+      <h3>Outreach</h3>
       <p>Elizabeth Maidl</p>
       <p>Jacob Groenendyk</p>
       <p>Rachel Springer</p>
