--- a/app/partials/socialwork.html
+++ b/app/partials/socialwork.html
@@ -1,11 +1,6 @@
 <div class="jumbotron section-header">
   <div class="container">
     <h1>Social Work Student Volunteers</h1>
-    <p>  </p>
+    <p> Coming soon! </p>
   </div>  
 </div>
-
-<div class="container">  
-  <h2>Sign Up</h2>
-  <ol> 
-    <li> Use <a href="https://docs.google.com/spreadsheets/d/1YEm_5rrInPfIclW4BwW0rqcFl5t_KA6PxfM4q_Ap68c/edit?usp=sharing">this</a> GoogleDoc to sign up for shifts!
