--- a/app/partials/contact.html
+++ b/app/partials/contact.html
@@ -68,7 +68,7 @@
   </div>
   <div class="col-md-12">
     <div class="col-md-4">
-      <h3>Technology & IT</h3>
+      <h3>Information Technology</h3>
       <p>Justin Porter</p>
     </div>
   </div>
