Add empty calendar to medstudents.

--- a/app/partials/medstudents.html
+++ b/app/partials/medstudents.html
@@ -17,3 +17,7 @@
     <li> Click on a date to view the entry for that day in more detail. <u>This will allow you to see the <strong>coordinator's email</strong> and <b>volunteers' phone numbers</b>, which are not visible on the main page due to space limitations.</u></li>
     <li>Click "<b>Edit Form</b>" <font color="red">(<b><u>NOT</u></b> <del>"New Item"</del>)</font> to type in your info on the sign-up form.<li>  
 </div>
+
+<div class="container" ng-controller="CalCtrl">
+  <div id="calendar"></div>
+</div>
