Pull calendar data using RESTful API and new key setup for calendar.

--- a/app/partials/medstudents.html
+++ b/app/partials/medstudents.html
@@ -19,5 +19,9 @@
 </div>
 
 <div class="container" ng-controller="CalCtrl">
+  <tr ng-repeat="datum in data | limitTo:5 ">
+    <td> <strong>{{datum.title.$t}}</strong> </td>
+  </tr>
+
   <div id="calendar"></div>
 </div>
