--- a/app/partials/medstudents.html
+++ b/app/partials/medstudents.html
@@ -5,6 +5,7 @@
   </div>
 </div>
 
+<!--
 <div class="container">  
   <h2>Sign Up</h2>
   <ol> 
@@ -17,11 +18,12 @@
     <li> Click on a date to view the entry for that day in more detail. <u>This will allow you to see the <strong>coordinator's email</strong> and <b>volunteers' phone numbers</b>, which are not visible on the main page due to space limitations.</u></li>
     <li>Click "<b>Edit Form</b>" <font color="red">(<b><u>NOT</u></b> <del>"New Item"</del>)</font> to type in your info on the sign-up form.<li>  
 </div>
+-->
 
 <div class="container" ng-controller="CalCtrl">
-  <tr ng-repeat="datum in data | limitTo:5 ">
-    <td> <strong>{{datum.title.$t}}</strong> </td>
-  </tr>
+  <p ng-repeat="event in data.items | limitTo:5 ">
+    {{event.start.dateTime | date: "yyyy-MM-dd"}}
+  </p>
 
   <div id="calendar"></div>
 </div>
